--- a/front/src/pages/AddTask/AddTask.sass
+++ b/front/src/pages/AddTask/AddTask.sass
@@ -85,3 +85,14 @@
     @include display(flex)
     @include align-items(center)
     @include justify-content(center)
+
+textarea
+  padding: 8px
+  min-height: 40px
+
+  color: #999999
+  font-size: 14px
+  font-weight: 500
+  line-height: 17px
+  font-style: normal
+  font-family: Montserrat
