--- a/front/src/pages/AddTask/AddTask.sass
+++ b/front/src/pages/AddTask/AddTask.sass
@@ -7,6 +7,13 @@
   @include align-items(center)
   @include justify-content(center)
 
+  &__saveBtn
+    width: 152px
+    height: 30px
+
+    background: #F5D312
+    border-radius: 3px
+
   &__block
     width: 100%
     max-width: 1146px
@@ -42,16 +49,16 @@
   &__recorder
     @include display(grid)
     @include grid-row-gap(24px)
-    height: 100px
 
   &__label
     width: 100%
     height: 80px
     border-radius: 3px
+    @include display(grid)
     background-color: #fff
-    @include display(flex)
-    @include align-items(center)
-    @include justify-content(center)
+    @include grid-gap(30px)
+    @include grid-template-rows(40px)
+    @include grid-template-columns(1fr 1fr 1fr 1fr)
 
     color: #999999
     font-size: 16px
