--- a/front/src/index.sass
+++ b/front/src/index.sass
@@ -2,9 +2,11 @@
 
 body
   margin: 0
+  overflow-x: hidden
   -moz-osx-font-smoothing: grayscale
   -webkit-font-smoothing: antialiased
-  background: rgba(104, 114, 149, 0.5)
+  background-repeat: repeat
+  background-image: url(assets/19700-li_spoonflower-treugolnik-list-uzor-zelenyj-1920x1200.jpg)
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
 
 .authForm
