--- a/front/src/components/Header/Header.sass
+++ b/front/src/components/Header/Header.sass
@@ -21,7 +21,8 @@
   @include display(flex)
   @include align-items(center)
 
-  &__text
+  &__text, a
+    text-underline: none
     color: #333
     font-size: 22px
     font-weight: 700
