add loader in add task

--- a/front/src/pages/AddTask/AddTask.sass
+++ b/front/src/pages/AddTask/AddTask.sass
@@ -7,6 +7,13 @@
   @include align-items(center)
   @include justify-content(center)
 
+  &__loader
+    width: 100vw
+    height: 100vh
+    @include display(flex)
+    @include align-items(center)
+    @include justify-content(center)
+
   &__saveBtn
     width: 152px
     height: 30px
